1.创建OC桥接MJRefresh 2.实现下拉刷新和下拉加载

--- a/GYJTV/Podfile
+++ b/GYJTV/Podfile
@@ -5,9 +5,14 @@ target 'GYJTV' do
 
 use_frameworks!
 
+# Swift库
 pod 'Alamofire', '~> 4.0.1'
 pod 'Kingfisher', '~> 3.1.1'
 pod 'ProtocolBuffers-Swift'
+
+# OC库
+pod 'MJRefresh'
+pod 'SVProgressHUD'
 
 
 end
